--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -25,24 +25,24 @@ about {
     white-space: nowrap;
     overflow: hidden;
     width: 17em;
-    animation: type 3.5s steps(60, end);
+    animation: type 3s steps(60, end);
 }
 
 .about .intro p:nth-child(2) {
-    animation: type2 3.5s steps(60, end);
+    animation: type2 3s steps(60, end);
 }
 
 .about .view-profile-button {
     background: transparent;
     color: white;
-    font-family: "Roboto";
+    font-family: 'Roboto';
     padding: 0.5em 4em;
 }
 
 .about .view-profile-button:active, .about .view-profile-button:focus {
     background: transparent;
     color: white;
-    font-family: "Roboto-Thin";
+    font-family: 'Roboto-Thin';
     padding: 0.5em 4em;
     outline: none;
 }
