Adding Experience component

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,7 @@
 @import './components/about/about';
 @import './components/canvas/canvas';
 @import './components/navBar/navBar';
+@import './components/experience/experience';
 
 body {
     margin: 0;
