Adding Skills component

--- a/src/app.scss
+++ b/src/app.scss
@@ -2,6 +2,7 @@
 @import './components/canvas/canvas';
 @import './components/navBar/navBar';
 @import './components/experience/experience';
+@import './components/skills/skills';
 
 body {
     margin: 0;
