Adding Education & Contact component

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,7 @@
 @import './components/navBar/navBar';
 @import './components/experience/experience';
 @import './components/skills/skills';
+@import './components/contact/contact';
 
 body {
     margin: 0;
